--- a/3.md
+++ b/3.md
@@ -2,7 +2,7 @@
 ## One-Way Hashing
 ### 1. MD5 (Message Digest Algorith)
 * MD5 produces a 128 bit hash value from a string of any length. It represents its digest as a 32 digit hexadecimal. MD5 is however considered insecure as computers have become powerful making MD5 hashes easy to crack. Below is an example of encrypting data using MD5
-```
+```python
 import hashlib
 text = "test"
 md5 = hashlib.md5(text.encode()).hexdigest()
@@ -12,7 +12,7 @@ print(md5)
 ```
 ### 2. SHA-256 (Secure Hash Algorithm)
 * SHA-256 produces a 256 bits digest that is irreversible and thus considered a secure hashing algorithm. To keep the digest as random as possible the clear text length should be less than 264 bits.
-```
+```python
 import hashlib
 text = "test"
 sha256 = hashlib.sha256(text.encode()).hexdigest()
@@ -20,10 +20,36 @@ sha256 = hashlib.sha256(text.encode()).hexdigest()
 # Display digest string
 print(sha256) 
 ```
+
+### 3. Bycrypt
+Bycrpt is a crypto graphic hash function designed for password hashing allowing private data to be stored in a backend database. Bcrypt adds a salt to the clear text to create a unique hash value that is impossible to break. The salt is a random 16 - byte value added in front of the clear text.
+
+```python
+import bycrpt
+
+class Bycrpt(object):
+    def __init__(self, password='', hashed_password=''):
+        self.password = password
+        self.hashed_password = hashed_password
+        
+    """
+        Hash password using salt
+    """
+    def hash_password(self):
+        salt = bycrpt.gensalt()
+        self.hashed_password  = bycrpt.hashpw(self.password.encode(), salt)
+        return self.hashed_password
+
+    """
+    Checked hashed password against the clear text
+    """
+    def check_password(self):
+        return  bycrpt.checkpw(self.password.encode('utf-8'), self.hashed_password)
+```
 ## Two-way Encryption
 ### 1. RSA (River-Shamir-Adleman) 
 RSA is the oldest and widely used two way encryption algorithm. RSA utilizes two different but linked keys. Both the private and public key can be utilized to encrypt a message. While the opposite key from the one used to encrypt the message can be used to decrypt it.
-```
+```python
 from Crypto.PublicKey import RSA
 from Crypto.Cipher import PKCS1_OAEP
 
@@ -40,7 +66,7 @@ decrypt_text = d_cipher.decrypt(encrypted_text).decode()
 ```
 ### 2. DES (Data Encryption Standard)
 * DES Encryption utilizes a 56 bit Key to customize the transformation that is conducted in block sizes of 64 bits. This means that decryption can be done with those with the key.
-```
+```python
 from Crypto.Cipher import DES
 from Crypto.Random import get_random_bytes
 
