--- a/1.md
+++ b/1.md
@@ -7,7 +7,7 @@ REST (Representational State Transfer) is an architecture that outlines how two 
 
 Using python3 requests module we can be able to simulate REST API basic CRUD operations.
 1.	GET
-```
+```python
 import requests
 response = request.get("https://example.com/users")
 if response.status_code == 200:
@@ -15,7 +15,7 @@ if response.status_code == 200:
 	print(response.json())
 ```
 2.	POST /  PUT
-```
+```python
 import requests
 data = { "key": "value" }
 
@@ -28,7 +28,7 @@ if res.status_code == 200:
 ```
 3.	DELETE
 	* Delete removes a record from the database permanently.
-```
+```python
 import requests
 
 #Make delete request
@@ -36,12 +36,12 @@ res = requests.delete("http://example.com/notification?notification_id=awdesds")
 
 if response.status_code == 200:
 	print(response.json()
-```  
+``` 
 ### 2. WebSockets 
 Websocket is a communication protocol that provides full-duplex communication over a single TCP connection. Websockets allow real-time bidirectional communication between the clients and servers.
 
 using python3  websocket module we can be able to create a client websocket connection that can connect to a websocket connection.
-```
+```python
 from websocket import create_connection
 import json
 
@@ -60,7 +60,7 @@ ws.close()
 ```
 ### 3. Message Queues
 This are services or data structures that stores and manages messages. They ensure that messages are delivered in the order they are received. They are a form of interprocess communication used to enable communication between different services asynchronously.  Celery is a distributed task queue that is often commbined with RabbitMQ to implement message queues as shown below.
-```
+```python
 from celery import Celery
 
 app = Celery("tasks", broker='pyamqp://guest@localhost//')
