--- a/2.md
+++ b/2.md
@@ -11,7 +11,7 @@ This save the user id of the current logged in user. The user id is removed when
 The device store facilitates in the process of deciding which devices while get a notification.
 ###  2. Notification Server
 The primary objective of this service will be to expose an API endpoint to send notifications and push as a job on the job queue. This can be a simple HTTP server that accepts the user ID and notification information in the request body e.g
-```json
+```
 POST http://example.com/notification
 user_id: <user_id>
 {
@@ -80,6 +80,19 @@ def  low_priority_task():
 	pass
 ```
 ### 3. Notification Worker
-The purpose of this service will be to consume messages from the job queus and send it to the respective notification providers.
+The purpose of this service will be to consume messages from the job queus and send it to the respective notification providers. For example the nofication provider could send the message to Firebase Cloud Messaging using fcm_django library.
+```python
+from fcm_django.models import FCMDevice
+from firebase_admin.messaging import Message
+from firebase_admin._messaging_utils import Notification
+
+def send_notification(title: str, message: str, topic: str):
+	FCMDevice.send_topic_message(Message(
+	    notification=Notification(
+		title=title,
+		body=message),
+	), topic)
+```
+The code above sends a message to uses who are related to a certain topic e.g doctors and nurses who are attending to the same patient, the patient id can be used as the topic.
 
 
